--- a/app/src/main/res/layout/app_bar.xml
+++ b/app/src/main/res/layout/app_bar.xml
@@ -22,39 +22,54 @@
             android:textSize="13sp"
             app:fontFile="Roboto-Light.ttf" />
 
-        <com.android.shopr.views.ShoprTextView
-            android:id="@+id/tv_location_name"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+        <LinearLayout
+            android:id="@+id/ll_location"
             android:layout_below="@+id/tv_page_type"
             android:layout_marginTop="4dp"
-            android:text="Ambience Mall, Gurgaon"
-            android:textAllCaps="false"
-            android:textColor="@color/colorWhite"
-            android:textSize="17sp"
-            app:fontFile="Roboto-Regular.ttf" />
+            android:orientation="horizontal"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content">
+
+            <com.android.shopr.views.ShoprTextView
+                android:id="@+id/tv_location_name"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textAllCaps="false"
+                android:textColor="@color/colorWhite"
+                android:textSize="17sp"
+                app:fontFile="Roboto-Regular.ttf" />
+
+            <ImageView
+                android:id="@+id/iv_dropdown"
+                android:layout_width="12dp"
+                android:layout_height="match_parent"
+                android:layout_gravity="bottom"
+                android:layout_marginLeft="5dp"
+                app:srcCompat="@drawable/ic_dropdown" />
+        </LinearLayout>
+
 
         <!--<com.android.shopr.views.ShoprEditText-->
-            <!--android:id="@+id/et_search_field"-->
-            <!--android:drawableLeft="@drawable/ic_search"-->
-            <!--android:drawableTint="@color/colorLightWhite"-->
-            <!--android:drawablePadding="10dp"-->
-            <!--android:text="ZZARA"-->
-            <!--android:textSize="18sp"-->
-            <!--android:textColor="@color/colorWhite"-->
-            <!--android:gravity="center_vertical"-->
-            <!--android:visibility="gone"-->
-            <!--android:layout_width="match_parent"-->
-            <!--android:layout_height="match_parent" />-->
+        <!--android:id="@+id/et_search_field"-->
+        <!--android:drawableLeft="@drawable/ic_search"-->
+        <!--android:drawableTint="@color/colorLightWhite"-->
+        <!--android:drawablePadding="10dp"-->
+        <!--android:text="ZZARA"-->
+        <!--android:textSize="18sp"-->
+        <!--android:textColor="@color/colorWhite"-->
+        <!--android:gravity="center_vertical"-->
+        <!--android:visibility="gone"-->
+        <!--android:layout_width="match_parent"-->
+        <!--android:layout_height="match_parent" />-->
 
         <!--<ImageView-->
-            <!--android:id="@+id/iv_cancel_search"-->
-            <!--android:layout_alignParentRight="true"-->
-            <!--android:layout_marginRight="5dp"-->
-            <!--android:visibility="gone"-->
-            <!--app:srcCompat="@drawable/ic_cross"-->
-            <!--android:layout_width="wrap_content"-->
-            <!--android:layout_height="match_parent" />-->
+        <!--android:id="@+id/iv_cancel_search"-->
+        <!--android:layout_alignParentRight="true"-->
+        <!--android:layout_marginRight="5dp"-->
+        <!--android:visibility="gone"-->
+        <!--app:srcCompat="@drawable/ic_cross"-->
+        <!--android:layout_width="wrap_content"-->
+        <!--android:layout_height="match_parent" />-->
 
 
     </RelativeLayout>
