--- a/app/src/main/res/layout/app_bar_store_detail.xml
+++ b/app/src/main/res/layout/app_bar_store_detail.xml
@@ -23,28 +23,26 @@
             app:srcCompat="@drawable/ic_back" />
 
         <com.android.shopr.views.ShoprTextView
-            android:id="@+id/tv_page_type"
+            android:id="@+id/tv_store_name"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="7dp"
             android:layout_toRightOf="@+id/iv_back"
-            android:text="ZARA"
             android:textAllCaps="true"
             android:textColor="@color/colorWhite"
-            android:textSize="16sp"
+            android:textSize="18sp"
             app:fontFile="Roboto-Regular.ttf" />
 
         <com.android.shopr.views.ShoprTextView
             android:id="@+id/tv_location_name"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_below="@+id/tv_page_type"
+            android:layout_below="@+id/tv_store_name"
             android:layout_marginTop="4dp"
             android:layout_toRightOf="@+id/iv_back"
-            android:text="Ambience Mall Gurgaon"
             android:textAllCaps="false"
             android:textColor="@color/colorWhite"
-            android:textSize="11sp"
+            android:textSize="14sp"
             app:fontFile="Roboto-Regular.ttf" />
 
     </RelativeLayout>
