--- a/app/src/main/res/layout/fragment_product_detail.xml
+++ b/app/src/main/res/layout/fragment_product_detail.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
@@ -13,7 +13,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:background="@color/colorWhite"
-            android:paddingBottom="20dp">
+            android:paddingBottom="60dp">
 
             <ImageView
                 android:id="@+id/iv_product_image"
@@ -242,4 +242,49 @@
 
         </RelativeLayout>
     </ScrollView>
-</LinearLayout>
+
+    <FrameLayout
+        android:id="@+id/fl_watch_product"
+        android:layout_width="150dp"
+        android:layout_height="50dp"
+        android:layout_alignParentBottom="true"
+        android:background="@color/colorAccent">
+
+        <com.android.shopr.views.ShoprTextView
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:layout_gravity="center"
+            android:drawableLeft="@drawable/ic_watch_white"
+            android:drawablePadding="10dp"
+            android:gravity="center"
+            android:text="WATCH"
+            android:textAllCaps="true"
+            android:textColor="@color/colorWhite"
+            android:textSize="14sp"
+            app:fontFile="Roboto-Medium.ttf" />
+    </FrameLayout>
+
+    <FrameLayout
+        android:id="@+id/fl_scan_and_add_to_cart"
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
+        android:layout_alignParentBottom="true"
+        android:layout_toRightOf="@+id/fl_watch_product"
+        android:background="@color/colorDarkGrey">
+
+        <com.android.shopr.views.ShoprTextView
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:layout_gravity="center"
+            android:drawableLeft="@drawable/ic_barcode"
+            android:drawableTint="@color/colorWhite"
+            android:drawablePadding="10dp"
+            android:gravity="center"
+            android:text="SCAN &amp; ADD TO BAG"
+            android:textAllCaps="true"
+            android:textColor="@color/colorWhite"
+            android:textSize="14sp"
+            app:fontFile="Roboto-Medium.ttf" />
+    </FrameLayout>
+
+</RelativeLayout>
