--- a/app/src/main/res/layout/app_bar.xml
+++ b/app/src/main/res/layout/app_bar.xml
@@ -16,43 +16,61 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-        <com.android.shopr.views.ShoprTextView
-            android:id="@+id/tv_page_type"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="7dp"
-            android:text="QUICK CHECKOUT"
-            android:textAllCaps="true"
-            android:textColor="@color/colorWhite"
-            android:textSize="13sp"
-            app:fontFile="Roboto-Light.ttf" />
-
-        <LinearLayout
-            android:id="@+id/ll_location"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_below="@+id/tv_page_type"
-            android:layout_marginTop="4dp"
-            android:orientation="horizontal">
+        <RelativeLayout
+            android:id="@+id/rl_container"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
 
             <com.android.shopr.views.ShoprTextView
-                android:id="@+id/tv_location_name"
+                android:id="@+id/tv_page_type"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:textAllCaps="false"
+                android:layout_marginTop="7dp"
+                android:text="QUICK CHECKOUT"
+                android:textAllCaps="true"
                 android:textColor="@color/colorWhite"
-                android:textSize="17sp"
-                app:fontFile="Roboto-Regular.ttf" />
+                android:textSize="13sp"
+                app:fontFile="Roboto-Light.ttf" />
 
-            <ImageView
-                android:id="@+id/iv_dropdown"
-                android:layout_width="12dp"
-                android:layout_height="match_parent"
-                android:layout_gravity="bottom"
-                android:layout_marginLeft="5dp"
-                app:srcCompat="@drawable/ic_dropdown" />
-        </LinearLayout>
+            <LinearLayout
+                android:id="@+id/ll_location"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/tv_page_type"
+                android:layout_marginTop="4dp"
+                android:orientation="horizontal">
 
+                <com.android.shopr.views.ShoprTextView
+                    android:id="@+id/tv_location_name"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textAllCaps="false"
+                    android:textColor="@color/colorWhite"
+                    android:textSize="17sp"
+                    app:fontFile="Roboto-Regular.ttf" />
+
+                <ImageView
+                    android:id="@+id/iv_dropdown"
+                    android:layout_width="12dp"
+                    android:layout_height="match_parent"
+                    android:layout_gravity="bottom"
+                    android:layout_marginLeft="5dp"
+                    app:srcCompat="@drawable/ic_dropdown" />
+            </LinearLayout>
+        </RelativeLayout>
+
+        <com.android.shopr.views.ShoprEditText
+            android:id="@+id/ed_search_store"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:background="@color/colorPrimaryDark"
+            android:layout_marginTop="15dp"
+            android:layout_marginBottom="15dp"
+            android:paddingLeft="10dp"
+            android:hint="Search Store"
+            android:textColorHint="@color/colorLightWhite"
+            android:textColor="@color/colorWhite"
+            app:fontFile="Roboto-Medium.ttf" />
     </RelativeLayout>
 
 </android.support.v7.widget.Toolbar>
