--- a/app/src/main/res/layout/activity_store_detail.xml
+++ b/app/src/main/res/layout/activity_store_detail.xml
@@ -41,6 +41,7 @@
         android:background="@color/colorDarkGrey">
 
         <Button
+            android:id="@+id/btn_scan2"
             android:layout_width="wrap_content"
             android:layout_height="60dp"
             android:layout_centerHorizontal="true"
